toy impl for worldgen